deployment/kubernetes/minikube/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      db: postgres
  template:
    metadata:
      labels:
        db: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15.1-alpine
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: NodePort
  selector:
    db: postgres
  ports:
    - protocol: TCP
      port: 5432
