deployment/kubernetes/minikube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rides-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - $MINIKUBE_HOST
      secretName: rides-ingress-cert
  rules:
    - host: $MINIKUBE_HOST
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
